force-app/main/default/objects/Matter__c/Matter__c.object-meta.xml
<CustomObject>
    <description>Central healthcare appeal workspace for the HLS demo command center.</description>
    <label>Matter</label>
    <nameField>
        <displayFormat>HLS-APL-{0000}</displayFormat>
        <label>Matter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>