force-app/main/default/objects/Matter__c/fields/Appeal_Level__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Level__c</fullName>
    <label>Appeal Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First-level Appeal</fullName>
            </value>
            <value>
                <fullName>Second-level Appeal</fullName>
            </value>
            <value>
                <fullName>External Review</fullName>
            </value>
            <value>
                <fullName>Reconsideration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>