force-app/main/default/objects/Matter__c/fields/Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Reason__c</fullName>
    <label>Assignment Reason</label>
    <type>TextArea</type>
</CustomField>