force-app/main/default/objects/Matter__c/fields/Billable_Payments__c.field-meta.xml
<CustomField>
    <fullName>Billable_Payments__c</fullName>
    <label>Billable Payments</label>
    <summarizedField>Matter_Payment__c.Billable_Amount__c</summarizedField>
    <summaryForeignKey>Matter_Payment__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>