force-app/main/default/objects/Matter__c/fields/Billing_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Billing_Readiness__c</fullName>
    <label>Billing Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Needs Payment Review</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>