force-app/main/default/objects/Matter__c/fields/Claim_ID__c.field-meta.xml
<CustomField>
    <fullName>Claim_ID__c</fullName>
    <label>Claim ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>