force-app/main/default/objects/Matter__c/fields/Denial_Date__c.field-meta.xml
<CustomField>
    <fullName>Denial_Date__c</fullName>
    <label>Denial Date</label>
    <type>Date</type>
</CustomField>