force-app/main/default/objects/Matter__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appeal Pending</fullName>
            </value>
            <value>
                <fullName>Submitted Online</fullName>
            </value>
            <value>
                <fullName>Fax Submitted</fullName>
            </value>
            <value>
                <fullName>Print/Mail Submitted</fullName>
            </value>
            <value>
                <fullName>Response Received</fullName>
            </value>
            <value>
                <fullName>Payment Posted</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>