force-app/main/default/objects/Matter__c/fields/Dollar_Placed__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Placed__c</fullName>
    <label>Dollar Placed</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>