force-app/main/default/objects/Matter__c/fields/Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source__c</fullName>
    <label>Integration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client File</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>RPA Handoff</fullName>
            </value>
            <value>
                <fullName>Manual Demo Intake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>