force-app/main/default/objects/Matter__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <label>MRN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>