force-app/main/default/objects/Matter__c/fields/Net_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Net_Recovery__c</fullName>
    <formula>Total_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Recovery</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>