force-app/main/default/objects/Matter__c/fields/Non_Billable_Payments__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Payments__c</fullName>
    <label>Non-Billable Payments</label>
    <summarizedField>Matter_Payment__c.Non_Billable_Amount__c</summarizedField>
    <summaryForeignKey>Matter_Payment__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>