force-app/main/default/objects/Matter__c/fields/Patient_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Account_Number__c</fullName>
    <label>Patient Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>