force-app/main/default/objects/Matter__c/fields/Payer_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Payer_Record_Count__c</fullName>
    <label>Payer Record Count</label>
    <summaryForeignKey>Matter_Payer__c.Matter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>