force-app/main/default/objects/Matter__c/fields/Payment_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Payment_Record_Count__c</fullName>
    <label>Payment Record Count</label>
    <summaryForeignKey>Matter_Payment__c.Matter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>