force-app/main/default/objects/Matter__c/fields/Pending_Review_Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Review_Payment_Count__c</fullName>
    <label>Pending Review Payment Count</label>
    <summaryFilterItems>
        <field>Matter_Payment__c.HLS_Code__c</field>
        <operation>equals</operation>
        <value>Pending Review</value>
    </summaryFilterItems>
    <summaryForeignKey>Matter_Payment__c.Matter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>