force-app/main/default/objects/Matter__c/fields/Percent_Paid__c.field-meta.xml
<CustomField>
    <fullName>Percent_Paid__c</fullName>
    <formula>IF(Dollar_Placed__c &gt; 0, Total_Payments__c / Dollar_Placed__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>