force-app/main/default/objects/Matter__c/fields/Total_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustments__c</fullName>
    <label>Total Adjustments</label>
    <summarizedField>Matter_Payment__c.Adjustment_Amount__c</summarizedField>
    <summaryForeignKey>Matter_Payment__c.Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>